// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "src/main/proto/wfa/measurement/internal/kingdom/exchange.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for managing `Exchange` resources.
service Exchanges {
  // Creates an `Exchange`.
  //
  // If there is already an Exchange for the same date for the given
  // `RecurringExchange`, this will do nothing and return that instead.
  rpc CreateExchange(CreateExchangeRequest) returns (Exchange);
}

// Request for `/Exchanges.CreateExchange`.
message CreateExchangeRequest {
  // The `Exchange` to create.
  Exchange exchange = 1;
}
